# Shared-Memory-using-Iceroxy

publisher/: CMakeLists.txt  myObject.h  pub.cpp
subscriber/: CMakeLists.txt  myObject.h  sub.cpp
